--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,16 @@ dependencies {
     // Image Network Coil
     implementation "io.coil-kt:coil-compose:2.0.0-rc01"
 
+    // Local unit tests
+    testImplementation "androidx.test:core:1.4.0"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+    testImplementation "io.mockk:mockk:1.10.5"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.1.0-alpha04"
+
     implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
 
     implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
